@startuml

  namespace com.showcontrol4j.trigger {
    interface com.showcontrol4j.trigger.ShowTrigger {
    }
  }
  

  namespace com.showcontrol4j.trigger {
    abstract class com.showcontrol4j.trigger.ShowTriggerBase {
    }
  }
  

  namespace com.showcontrol4j.trigger {
    namespace keyboard {
      class com.showcontrol4j.trigger.keyboard.KeyboardEventTrigger {
      }
    }
  }
  

  com.showcontrol4j.trigger.ShowTriggerBase .up.|> com.showcontrol4j.trigger.ShowTrigger
  com.showcontrol4j.trigger.ShowTriggerBase o-- com.showcontrol4j.broker.BrokerConnectionFactory : brokerConnectionFactory
  com.showcontrol4j.trigger.ShowTriggerBase o-- com.showcontrol4j.exchange.MessageExchange : messageExchange
  com.showcontrol4j.trigger.keyboard.KeyboardEventTrigger -up-|> com.showcontrol4j.trigger.ShowTriggerBase


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
